# HebbCode

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
crates/hebbcode/: Cargo.toml
crates/hebbcode/src/: main.rs
