[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
repository = "https://github.com/Nugine/HebbCode"
license = "Apache-2.0"
rust-version = "1.92.0"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }

[profile.release]
debug = "line-tables-only"
